--- a/index.html
+++ b/index.html
@@ -5,26 +5,43 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Landing Page project</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <div>
-            <h1>Adeola Praise</h1>
-            <ul>
-                <li>
-                    <a>Home</a>
-                </li>
-                <li>
-                    <a>About</a>
-                </li>
-                <li>
-                    <a>Projects</a>
-                </li>
-            </ul>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <img src="./images/image-one.jpg" alt="My Dream Setup">
-            <button>Sign up</button>
+        <div class="hero">
+            <div class="header">
+                <div class="logo">NIRVANA</div>
+                <div class="nav-bar">
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Products</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="main">
+                <div class="left">
+                    <h1 class="title">This website is awesome</h1>
+                    <p class="sub-title">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                    </p>
+                    <button class="btn">Buy Now</button>
+                </div>
+                <div id="right">
+                    <img src="https://m.media-amazon.com/images/I/81wE71BVTmL._AC_UL320_.jpg" id="image-one">
+                </div>
+            </div> 
+        </div>
+
+        <div class="second">
+            <h2>Some random information</h2>
         </div>
     </body>
 </html>
