--- a/index.html
+++ b/index.html
@@ -35,13 +35,44 @@
                     <button class="btn">Buy Now</button>
                 </div>
                 <div id="right">
-                    <img src="https://m.media-amazon.com/images/I/81wE71BVTmL._AC_UL320_.jpg" id="image-one">
+                    <img src="./images/main-product.png" id="image-one">
                 </div>
             </div> 
         </div>
 
         <div class="second">
-            <h2>Some random information</h2>
+            <h2 id="sub-header">Check our products</h2>
+            <div class="container">
+                <div class="cards">
+                    <div class="box">
+                        <img src="./images/product-one.png" class="product-image">
+                    </div>
+                    <p class="card-text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="cards">
+                    <div class="box">
+                        <img src="./images/product-two.png" class="product-image">
+                    </div>
+                    <p class="card-text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="cards">
+                    <div class="box">
+                        <img src="./images/product-three.png" class="product-image">
+                    </div>
+                    <p class="card-text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="cards">
+                    <div class="box">
+                        <img src="./images/product-four.png" class="product-image">
+                    </div>
+                    <p class="card-text">this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="third">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maye it's just filling up space, or maye people will actually read it. Who knows? All I know is that it looks nice.</p>
         </div>
     </body>
 </html>
