--- a/index.html
+++ b/index.html
@@ -72,7 +72,18 @@
         </div>
 
         <div class="third">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maye it's just filling up space, or maye people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p id="quote">This is an inspiring quote, or a testimonial from a customer. Maye it's just filling up space, or maye people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p id="author">-Thor, God of Thunder</p>
+        </div>
+
+        <div class="fourth">
+            <div class="action">
+                <div>
+                    <h3>Call to action! it's time</h3>
+                    <p>Sign up for our product y clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
         </div>
     </body>
 </html>
