--- a/index.html
+++ b/index.html
@@ -78,12 +78,16 @@
 
         <div class="fourth">
             <div class="action">
-                <div>
-                    <h3>Call to action! it's time</h3>
-                    <p>Sign up for our product y clicking that button right over there!</p>
+                <div class="message">
+                    <h3>Call to action! it's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button>Sign up</button>
+                <button id="btn-two">Sign up</button>
             </div>
+        </div>
+
+        <div class="footer">
+            <p>Copyright Ⓒ The Odin Project 2021</p>
         </div>
     </body>
 </html>
