--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
             <div class="main">
                 <div class="left">
-                    <h1 class="title">This website is awesome</h1>
-                    <p class="sub-title">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                    <h1 class="title">This website is <br> awesome</h1>
+                    <p class="sub-title">This website has some subtext that goes here under the <br> main title. It's a smaller font and the color is lower <br> contrast.
                     </p>
                     <button class="btn">Buy Now</button>
                 </div>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="second">
-            <h2 id="sub-header">Check our products</h2>
+            <h1 id="sub-header">Check our products</h1>
             <div class="container">
                 <div class="cards">
                     <div class="box">
@@ -72,7 +72,7 @@
         </div>
 
         <div class="third">
-            <p id="quote">This is an inspiring quote, or a testimonial from a customer. Maye it's just filling up space, or maye people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p id="quote">This is an inspiring quote, or a testimonial from a <br> customer. Maybe it's just filling up space, or maybe <br> people will actually read it. Who knows? All I know <br> is that it looks nice.</p>
             <p id="author">-Thor, God of Thunder</p>
         </div>
 
